Update 'j20h26k7s-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-d678530f68.tyg6.p3.openshiftapps.com/rhtap/rhtap-qe-python:ac887ac591e2da908cfe29608e9918c75fa36d1e@sha256:45086f0271300f603126a39727bc351bf68c154e7921fc1b4c133a5937cc3175

--- a/components/j20h26k7s-python/overlays/development/deployment-patch.yaml
+++ b/components/j20h26k7s-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: j20h26k7s-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-d678530f68.tyg6.p3.openshiftapps.com/rhtap/rhtap-qe-python:ac887ac591e2da908cfe29608e9918c75fa36d1e@sha256:45086f0271300f603126a39727bc351bf68c154e7921fc1b4c133a5937cc3175
+          name: container-image
